--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,13 +1,301 @@
 * {
     margin: 0;
     padding: 0;
+
+    font-family: "Calibri", "Arial";
+    color: #323232;
 }
 
-body {
-    display: flex;
-    justify-content: center;
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
+
+.non_selectable {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+.main_container {
+    display: grid;
     align-items: center;
 
     width: 100vw;
     height: 100vh;
+
+    overflow: hidden;
+}
+
+.title {
+    font-family: "Oswald";
+    font-weight: 400;
+
+    padding-bottom: 5px;
+}
+
+.password_display {
+    flex-grow: 1;
+
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#passwordText {
+    padding: 0 10px;
+
+    font-size: 1.2em;
+    align-content: center;
+    line-height:40px;
+}
+
+.field_group {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10px;
+}
+
+.checkbox_group {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.card_content form {
+    position: relative;
+
+    display: grid;
+    gap: 20px;
+
+    height: fit-content;
+}
+
+form button {
+    justify-self: end;
+}
+
+
+/* Background ============= */
+/* From Uiverse.io by jeremyssocial */ 
+.main_container {
+    /* Dark mode colors and gradient */
+    background: #7e7e7e; /* Fallback for browsers that don't support gradients */
+    background: linear-gradient(
+        135deg,
+        #121212 25%,
+        #1a1a1a 25%,
+        #1a1a1a 50%,
+        #121212 50%,
+        #121212 75%,
+        #1a1a1a 75%,
+        #1a1a1a
+    );
+    background-size: 40px 40px;
+
+    /* Animation */
+    animation: move 4s linear infinite;
+}
+
+@keyframes move {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 40px 40px;
+    }
+}
+
+
+/* Frame ============= */
+/* From Uiverse.io by EmmaxPlay */ 
+.card {
+    margin: 0 auto;
+    position: relative;
+
+    width: 580px;
+    height: fit-content;
+
+    background-color: #aff3ff;
+    border-radius: 8px;
+}
+
+.tools {
+    display: flex;
+    align-items: center;
+    padding: 9px;
+}
+
+.title {
+    position: absolute;
+
+    right: 9px;
+    top: 6px;
+}
+
+.circle {
+    padding: 0 4px;
+}
+
+.box {
+    display: inline-block;
+    align-items: center;
+    width: 10px;
+    height: 10px;
+    padding: 1px;
+    border-radius: 50%;
+}
+
+.red {
+    background-color: #ff605c;
+}
+
+.yellow {
+    background-color: #ffbd44;
+}
+
+.green {
+    background-color: #00ca4e;
+}
+
+.card_content {
+    margin: auto;
+    padding: 20px 10px;
+    position: relative;
+
+    width: 90%;
+    height: fit-content;
+}
+
+.card_footer {
+    margin: auto;
+    padding-top: 15px;
+    
+    display: flex;
+    gap: 20px;
+
+    width: 100%;
+    height: fit-content;
+}
+
+
+/* Input ============= */
+form input {
+    padding: 12px 16px;
+    border-radius: 6px;
+    font-family: inherit;
+    border: 1px solid #ccc;
+}
+
+
+/* Button ============= */
+/* From Uiverse.io by virus231 */
+.button {
+    background: linear-gradient(140.14deg, #ec540e 15.05%, #d6361f 114.99%)
+            padding-box,
+        linear-gradient(142.51deg, #ff9465 8.65%, #af1905 88.82%) border-box;
+    border-radius: 7px;
+    border: 2px solid transparent;
+
+    text-shadow: 1px 1px 1px #00000040;
+    box-shadow: 8px 8px 20px 0px #45090059;
+
+    width: 120px;
+
+    padding: 10px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: all 0.3s;
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.button:hover {
+    box-shadow: none;
+    opacity: 80%;
+}
+
+
+/* Checkbox ============= */
+/* From Uiverse.io by aboalsim114 */ 
+/* Hide the default checkbox */
+.checkbox {
+    padding: 10px 5px;
+
+    display: inline-flex;
+    gap: 10px;
+    /* justify-content: center; */
+}
+
+.checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkbox div {
+    display: inline-block;
+}
+
+
+/* Create a custom checkbox */
+.checkmark {
+    position: relative;
+    box-shadow: rgb(255, 84, 0) 0px 0px 0px 2px;
+    background-color: rgba(16, 16, 16, 0.5);
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+    flex-shrink: 0;
+    margin-top: -1px;
+    transition: all 0.2s ease 0s;
+    cursor: pointer;
+    transform-origin: 0px 10px;
+    border-radius: 4px;
+    margin: -1px 10px 0px 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+.checkbox input:checked ~ .checkmark {
+    box-shadow: rgb(255, 84, 0) 0px 0px 0px 2px;
+    background-color: rgba(245, 24, 24, 0.5);
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+    flex-shrink: 0;
+    margin-top: -1px;
+    transition: all 0.2s ease 0s;
+    cursor: pointer;
+    transform-origin: 0px 10px;
+    border-radius: 4px;
+    margin: -1px 10px 0px 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.checkbox input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox .checkmark:after {
+    left: 0.45em;
+    top: 0.25em;
+    width: 0.25em;
+    height: 0.5em;
+    border: solid white;
+    border-width: 0 0.15em 0.15em 0;
+    transform: rotate(45deg);
+    transition: all 500ms ease-in-out;
 }
