Enabled Context Protection

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
 </body>
 <script type="module">
     import { protectContext } from "{{ url_for('static', filename='js/protectContext.js') }}";
-    // protectContext();
+    protectContext();
 </script>
 <script>
     function copyToClipboard(content) {
